Scalog implemented using akka sharding (basic version with no database access).

--- a/src/main/resources/client.conf
+++ b/src/main/resources/client.conf
@@ -18,7 +18,7 @@ akka {
         "scalapb.GeneratedMessage" = proto
 
         "com.google.protobuf.Message" = proto
-        "cluster.CborSerializable" = jackson-cbor
+        "services.scalable.darwindb.CborSerializable" = jackson-cbor
       }
     }
 }
