--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -20,7 +20,7 @@ akka {
       "scalapb.GeneratedMessage" = proto
 
       "com.google.protobuf.Message" = proto
-      "cluster.CborSerializable" = jackson-cbor
+      "services.scalable.darwindb.CborSerializable" = jackson-cbor
     }
   }
 
